<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/gray">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_sheet_drawable">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/geoSelectorBtnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_chevron_left_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/geoSelectorTvQuizCountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/geoSelectorBtnLeft"
            android:layout_alignBottom="@id/geoSelectorBtnLeft"
            android:layout_toEndOf="@id/geoSelectorBtnLeft"
            android:gravity="center_vertical"
            android:textColor="@color/gray"
            tools:text="@string/geo_selector_quiz_count_pattern" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/geoSelectorBtnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_toEndOf="@id/geoSelectorTvQuizCountTitle"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_chevron_right_black_24dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/geoSelectorBtnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/geoSelectorBtnLeft"
            android:layout_alignBottom="@id/geoSelectorBtnLeft"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:textStyle="normal"
            android:text="@string/geo_selector_accept"
            android:textColor="@color/blue" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/geoSelectorBtnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/geoSelectorBtnLeft"
            android:layout_alignBottom="@id/geoSelectorBtnLeft"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:textStyle="normal"
            android:text="@string/geo_selector_next"
            android:textColor="@color/blue"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/geoSelectorTvQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/geoSelectorBtnLeft"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:text="sample" />
    </RelativeLayout>

</RelativeLayout>